k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: afrikraga-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      securityContext:
        runAsNonRoot: true
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: frontend
          image: ghcr.io/tag95/afrikraga-frontend:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
          command: ["sh", "-c", "npm run build && npm run preview"]
          ports:
            - containerPort: 4173
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: afrikraga-demo
spec:
  selector:
    app: frontend
  ports:
    - port: 4173
      targetPort: 4173
